--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>Isme - The Discord Bot </title>
+</head>
+<body style="background-color: #2E9BFF;">
+    <h1 style="font-size: medium;">This is <br> Heading</h1>
+    <br>
+    <h2>This is Heading 2</h2>
+    <p title="I'm a tooltip" style="text-align: center;">this is paragrap.</p>
+    <a style="color: #2E9BFF;" href="https://discord.com/api/oauth2/authorize?client_id=800286824018214912&permissions=74467334&scope=bot">Invite my bot</a>
+
+    <b>this is bold</b>
+    <img src="/imgs/logo/logo.png" alt="Isme Logo" width="100" height="100">
+    <strong>thistext is importsan</strong>
+    <i>this text <mark>is</mark> italic</i>
+    <address>
+        created by Nhaatj
+    </address>
+</body>
+</html>
