--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a style="color: #2E9BFF;" href="https://discord.com/api/oauth2/authorize?client_id=800286824018214912&permissions=74467334&scope=bot">Invite my bot</a>
 
     <b>this is bold</b>
-    <img src="/imgs/logo/logo.png" alt="Isme Logo" width="100" height="100">
+    <img src="./imgs/logo/logo.png" alt="Isme Logo" width="100" height="100">
     <strong>thistext is importsan</strong>
     <i>this text <mark>is</mark> italic</i>
     <address>
