--- a/index.html
+++ b/index.html
@@ -4,21 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
-    <title>Isme - The Discord Bot </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Isme - The Discord Bot</title>
 </head>
-<body style="background-color: #2E9BFF;">
-    <h1 style="font-size: medium;">This is <br> Heading</h1>
-    <br>
-    <h2>This is Heading 2</h2>
-    <p title="I'm a tooltip" style="text-align: center;">this is paragrap.</p>
-    <a style="color: #2E9BFF;" href="https://discord.com/api/oauth2/authorize?client_id=800286824018214912&permissions=74467334&scope=bot">Invite my bot</a>
+<body>
+    <!-- top -->
+    <div class="top">
+        <div class="top_menu">
+            <a href="/" class="logo_top">
+                <img src="./imgs/logo_circle.png" alt="logo_top" class="image_top">
+            </a>
+            <div class="link_top">
+                <a href="https://discord.com/api/oauth2/authorize?client_id=800286824018214912&permissions=3176448&scope=bot" class="link">
+                    Add to Discord
+                </a>
+                <a href="./tab/command.html" class="link">Commands</a>
+                <a href="./tab/social.html" class="link">Social</a>
+            </div>
+        </div>
+    </div>
+    <!-- mid -->
+    <div class="mid">
+        <div class="bg">
+            <img src="./imgs/background_mid.png" alt="bg_id">
+        </div>
+        <div class="intro">
+            <div class="text">
+                <h1 class="tittle">
+                    The Discord Bot.
+                </h1>
+                <h2 class="description">
+                    Isme is an essential bot for your server.
+                </h2>
+                <a href="#" class="button">
+                    Add to Discord
+                </a>
+            </div>
+            <div class="logo_mid">
+                <img src="./imgs/logo_circle.png" alt="logo_mid" draggable="false" class="image">
+            </div>
+        </div>
+    </div>
+    <!-- bottom -->
+    <div class="bottom">
+        <div class="features">
+            <div class="feature">
+                <div class="icon">
 
-    <b>this is bold</b>
-    <img src="./imgs/logo/logo.png" alt="Isme Logo" width="100" height="100">
-    <strong>thistext is importsan</strong>
-    <i>this text <mark>is</mark> italic</i>
-    <address>
-        created by Nhaatj
-    </address>
+                </div>
+                <div class="text">
+                    <div class="title">
+                        <h1>a</h1>
+                    </div>
+                    <div class="description"></div>
+                </div>
+            </div>
+
+            <div class="feature">
+                <div class="icon">
+
+                </div>
+                <div class="text">
+                    <div class="title">
+                        <h1>b</h1>
+                    </div>
+                    <div class="description"></div>
+                </div>
+            </div>
+
+            <div class="feature">
+                <div class="icon">
+
+                </div>
+                <div class="text">
+                    <div class="title">
+                        <h1>c</h1>
+                    </div>
+                    <div class="description"></div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <!-- wrapper -->
+    <div class="wrapper">
+        <div class="text">
+            <div class="title">
+
+            </div>
+            
+            <div class="description">
+
+            </div>
+        </div>
+
+        <div class="wrapper_contact">
+
+        </div>
+
+        <div class="wrapper_menu">
+
+        </div>
+
+        <dir class="wrapper_copyright">
+            
+        </dir>
+    </div>
 </body>
 </html>
